Updated positioning of latest news header and filters to prevent overlap, applied more latest news styling to in the media

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -201,9 +201,9 @@ footer .block{margin:0; padding-left:0; padding-right:0; padding-top:0.7em; padd
 .view-our-team-page .item-list ul.our-team-member-profile li .custom-ourteam-list-items:hover{background:#e2eef0;}
 .view-our-team-page .item-list ul.our-team-member-profile li:hover:after{height:4px;}
 /*News page*/
-.section-news .content-area h1#page-title{display:none;}
+.section-news .content-area h1#page-title, .section-in-media .content-area h1#page-title{display:none;}
 .latest-news{margin:0 -20px; display:block; font-size:0;}
-.views-field-field-latest-news-image img{max-height:460px;object-fit:cover;}
+.views-field-field-latest-news-image img{max-height:460px;min-height:200px;object-fit:cover;}
 .views-row-first .views-field-field-latest-news-image img{min-height:267px}
 .latest-news-list .latest-news li{width:50%; padding:0 20px !important; display:inline-block; vertical-align:top; position:relative; margin-bottom:60px !important;}
 .latest-news-list .latest-news li .views-field-field-latest-news-image img{width:100%;}
@@ -214,7 +214,7 @@ footer .block{margin:0; padding-left:0; padding-right:0; padding-top:0.7em; padd
 .views-exposed-form .views-exposed-widget{float:left;padding:0 20px 0 0;}
 .views-exposed-form .views-exposed-widget:nth-child(3){padding-right:0;}
 #views-exposed-form-news-page-latest-news-page .views-widget-sort-by{display:none;}
-#views-exposed-form-news-page-latest-news-page {margin:0 0 0 auto !important;width:444px;z-index:9;}
+#views-exposed-form-news-page-latest-news-page, #views-exposed-form-in-media-page-latest-in-media-page {margin:0 0 0 auto !important;width:444px;z-index:9;}
 .form-type-select span{ display:inline;}
 .form-type-select span .selection > span{background:url(../images/arrow.png) no-repeat right center #e3eff1; appearance:none;  font:700 12px/20px 'montserrat'; -o-appearance:none; -webkit-appearance:none; -ms-appearance:none; -moz-appearance:none; padding:0; border-radius:10px; border:none; width:200px; height:auto; margin-top:5px; cursor:pointer;}
 .select2-container--default .select2-selection--single .select2-selection__rendered{color:#7e91aa;padding:6px 20px; height:auto; line-height:auto;}
@@ -557,7 +557,7 @@ div#readspeaker_button1{
     /* News */
     .latest-news-list .latest-news li:first-child{width:100%; padding:0; clear:both;}
     .latest-news-list .latest-news li:first-child .views-field-field-latest-news-image{width:60%;}
-    .latest-news-list .latest-news li:first-child .news-header-section{position:absolute; width:80%; bottom:40px; right:15px;}
+    .latest-news-list .latest-news li:first-child .news-header-section{margin-top:-200px; width:80%; bottom:0; right:15px;}
     .latest-news-list .latest-news li:first-child .news-header-section h3{font-size:30px;}
     .view-our-team-page .item-list ul.our-team-member-profile li:nth-child(3n+1){clear:both;}
 }
